cluster/gitops/system-controllers/xpumanager/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: xpumanager
specs:
  - description: xpumanager
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: xpumanager
        app.kubernetes.io/name: xpumanager
    ingress:
      # kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "29999"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "29999"
                protocol: TCP
